2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Add comment for translators about the
	delivery notification (Closes: #553177)

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* telepathy/im-channel.c (phoney_im_channel_get_interfaces),
	(chat_state_iface_init), (phoney_im_channel_send): A few more
	warning fixes

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_push),
	(phonemgr_listener_new_sms_cb), (phonemgr_listener_new_call_cb),
	(phonemgr_listener_cell_not_cb),
	(phonemgr_listener_parse_data_uuid), (phonemgr_listener_get_data),
	(phonemgr_listener_delete_data):
	* src/main.c:
	* src/phonemgr-chooser-button.c (set_btdevname),
	(phonemgr_chooser_button_class_init):
	* src/phonemgr-object.h:
	* src/ui.c (populate_prefs): Loads of warning fixes

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* src/e-phone-entry.h:
	* src/phonemgr-chooser-button.h:
	Patch from Przemysław Grzegorczyk <pgrzegorczyk@gmail.com>
	to fix build with a single include GTK+ (Closes: #565036)

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* cut-n-paste/e-contact-entry/Makefile.am: Add code
	to update EContactEntry

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* cut-n-paste/gconf-bridge/Makefile.am:
	* cut-n-paste/gconf-bridge/gconf-bridge.c
	(gconf_bridge_bind_window), (window_binding_unbind),
	(gconf_bridge_bind_string_list_store):
	* cut-n-paste/gconf-bridge/gconf-bridge.h: Update from
	libgconf-bridge

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Don't translate the text
	in the otherportentry widget, it's overwritten anyway,
	patch from Daniele Forsi <dforsi@gmail.com> (Closes: #565357)

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* src/app.h:
	* src/main.c (main):
	* src/ui.c (idle_play_alert): Code removal galore, use
	libcanberra to play back sounds instead of GStreamer
	(Closes: #558285)
